--- a/fullstack/src/main/resources/templates/error404.html
+++ b/fullstack/src/main/resources/templates/error404.html
@@ -7,7 +7,8 @@
     <title>Menu</title>
 </head>
 <body>
-	<h3 align="center"> ERROR 404 </h3>
-	<p><a href="/"> Tornare alla pagina login? </a> </p>
+	<h1 align="center"> ERROR 404 </h1>
+		<h3> Devi loggarti prima! </h3>
+		<p><a href="/">  Tornare alla pagina login? </a> </p>
 </body>
-</html>
+</html>s
