--- a/fullstack/src/main/resources/templates/listaUtenti.html
+++ b/fullstack/src/main/resources/templates/listaUtenti.html
@@ -6,6 +6,8 @@
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="pr.css">
     <title>Menu</title>
 </head>
 <body>
@@ -60,27 +62,39 @@
         </li>
         </ul>
     </div>
-    
+
+	  	
     <!-- Lista Utenti -->
     <section class="home-section">
-    
-    
-    
-   
-		<th:block th:each="utenti : ${utenti}">	
-			<tr>
-	     		<td th:text="${utenti.nome}"></td>
-	     		<td th:text="${utenti.cognome}"></td>
-	     		<td th:text="${utenti.email}"></td>
-				<td th:text="${utenti.ruolo.ruolo}"></td>
-	  		</tr>
-	  	</th:block>
 	  	
+	  <div class="title-container">
+        <div class="title">
+            <p> Lista Utenti </p>
+        </div>
+      </div>	
 	  	
-	  	
-	  	
-	  	
-	 </section>
+        
+     <div class="table-container" >
+        <table>
+          <tr>
+            <th>Nome</th>
+            <th>Cognome</th>
+            <th>Email</th>
+            <th>Ruolo</th>
+            <th>Password</th>
+
+           
+          </tr>
+          <tr th:each="utenti : ${utenti}">
+            <td th:text="${utenti.nome}"></td>
+            <td th:text="${utenti.cognome}"></td>
+            <td th:text="${utenti.email}"></td>
+            <td th:text="${utenti.ruolo.ruolo}"></td>
+            <td th:text="${utenti.password}"></td>
+        
+        </table>
+      </div>
+    </section>  
 </body>
 <!-- CSS STYLE -->
 <style>
@@ -332,7 +346,7 @@
 }
 .home-section{
   position: relative;
-  background: #E4E9F7;
+  background: #ffffff;
   min-height: 100vh;
   top: 0;
   left: 78px;
@@ -354,7 +368,57 @@
 
 
 
-/* CSS Lista Utenti */
+
+/* Lista utenti CSS */
+.title-container {
+    padding-top: 20px;
+    width: 40%;
+   
+    margin: auto;
+    align-items: center;
+}
+
+.title {
+    width: 100%;
+    margin: auto;
+    justify-content: center;
+    text-align: center;
+
+}
+
+.title p {
+    font-size: 30px;
+}
+
+
+.table-container {
+    overflow-x: auto;
+    width: 80%;
+    margin: auto;
+    padding-top: 40px;
+}
+
+.table-container table {
+    border-collapse: collapse;
+    border-spacing: 0;
+    width: 100%;
+    border: 0.5px solid #002F56;
+}
+
+.table-container table th {
+    text-align: center;
+    padding: 8px;
+    background-color: #002F56;
+    color: white;
+    border: 0.5px solid #ffffff;
+    border-bottom: none;
+}
+
+.table-container table td {
+    text-align: center;
+    padding: 8px;
+    border: 0.5px solid #002F56;
+}
 
 </style>
 </html>
