--- a/fullstack/src/main/resources/templates/menuFeedback.html
+++ b/fullstack/src/main/resources/templates/menuFeedback.html
@@ -1,27 +1,436 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en" xmlns:th="https://thymeleaf.org">
+  <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title> Menu Feedback </title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <!-- Boxicons CDN Link -->
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-    <title>menu</title>
-   
-</head>
-<body>
+   </head>
+    <body>
+    <!--  Navbar on the left -->
+    <div class="sidebar">
+        <div class="logo-details">
+
+        <i></i>
+            <div class="logo_name"></div>
+            <i class='bx bx-menu' id="btn" ></i>
+        </div>
+
+        
+        <ul class="nav-list">
 
 
-<div class="pusalntiera"  >
-	
+        <li>
+            <a href="/studente/profilo"> 
+                <i class='bx bxs-user' ></i>
+            <span class="links_name">Profilo</span>
+            </a>
+            <span class="tooltip">Profilo</span>
+        </li>
+            
+      
+
+        <li class="profile">
+            <div class="profile-details">
+            <!--<img src="profile.jpg" alt="profileImg">-->
+            <div class="name_job">
+                <div class="name"><p th:text= "${utente.nome}"></p></div> <!-- Nome Utente -->
+                <div class="job"><p th:text="${utente.ruolo.ruolo}"></div> <!-- Ruolo -->
+            </div>
+            </div>
+            <a href="/logout"><i class='bx bx-log-out' id="log_out" ></i></a> <!-- Mapping che mi fa il logout -->
+        </li>
+        </ul>
+    </div>
+
+    <!-- Qua va messo tutto il contenuto ovvero il report --> 
+    <section class="home-section">
+        <div class="title-container">
+            <p class="report-title"> MENU FEEDBACK  </p>
+            <h4 align="center"> Scegli il modulo a cui a fare il sondaggio: </h4>
+        </div>
+        <div class="container-report">
+            <div class="box-modulo" th:each="m : ${modulo}">
+                <div class="title-modulo">
+                    <a onclick="getId(this.id)"th:id="${m.idmodulo}" class="modulo-text" th:text="${m.modulo}"></a>
+             		
+      			
+            	</div>
+    		</div>
+        </div>
+	</section>
+    
+<!-- JavaScript -->
+<script type="text/javascript">
+			
+		var id;
+
+		function getId(clicked_id) {
+			  id = clicked_id;
+			  console.log(id);
+		}
 		
-		<a class="button"  th:each="materia : ${materie}" role="button" th:text="${materia.modulo}" th:href="@{/studente/menu/{id}(id=${materia.idmodulo})}">
 		
-		</a>	
+		console.log(id);
+		
+		$(document).ready(function(){
+			  $(".modulo-text").click(function(clicked_id){
+			    $.ajax({url: "", success: function(result){
+			    	window.location = `/studente/sondaggio/${id}`;
+			    }});
+			  });
+			});
+		
+		
+		/* Codice per le animazioni della navbar */
+	    let sidebar = document.querySelector(".sidebar");
+	    let closeBtn = document.querySelector("#btn");
+	    let searchBtn = document.querySelector(".bx-search");
 	
-	
-	
-	
-</div>
-
+	    closeBtn.addEventListener("click", ()=>{
+	        sidebar.classList.toggle("open");
+	        menuBtnChange();
+	    });
+	    
+	    
+	   
+	    function menuBtnChange() {
+	    if(sidebar.classList.contains("open")){
+	        closeBtn.classList.replace("bx-menu", "bx-menu-alt-right");
+	    }else {
+	        closeBtn.classList.replace("bx-menu-alt-right","bx-menu");
+	    }
+	    }
+	    
+	  
+	    
+</script>
 </body>
+
+
+<!-- CSS STYLE -->
+<style>
+
+/* Google Font Link */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins" , sans-serif;
+}
+
+
+
+.sidebar{
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 78px;
+  background: #002F56;
+  padding: 6px 14px;
+  z-index: 99;
+  transition: all 0.5s ease;
+}
+
+.sidebar.open{
+  width: 250px;
+}
+
+
+.sidebar .logo-details{
+  height: 60px;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+
+.sidebar .logo-details .icon{
+  opacity: 0;
+  transition: all 0.5s ease;
+}
+
+
+.sidebar .logo-details .logo_name{
+  color: #fff;
+  font-size: 20px;
+  font-weight: 600;
+  opacity: 0;
+  transition: all 0.5s ease;
+}
+
+
+.sidebar.open .logo-details .icon,
+.sidebar.open .logo-details .logo_name{
+  opacity: 1;
+}
+
+
+.sidebar .logo-details #btn{
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  font-size: 22px;
+  transition: all 0.4s ease;
+  font-size: 23px;
+  text-align: center;
+  cursor: pointer;
+  transition: all 0.5s ease;
+}
+
+
+.sidebar.open .logo-details #btn{
+  text-align: right;
+}
+.sidebar i{
+  color: #fff;
+  height: 60px;
+  min-width: 50px;
+  font-size: 28px;
+  text-align: center;
+  line-height: 60px;
+}
+.sidebar .nav-list{
+  margin-top: 20px;
+  height: 100%;
+}
+.sidebar li{
+  position: relative;
+  margin: 8px 0;
+  list-style: none;
+}
+.sidebar li .tooltip{
+  position: absolute;
+  top: -20px;
+  left: calc(100% + 15px);
+  z-index: 3;
+  background: #fff;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+  padding: 6px 12px;
+  border-radius: 4px;
+  font-size: 15px;
+  font-weight: 400;
+  opacity: 0;
+  white-space: nowrap;
+  pointer-events: none;
+  transition: 0s;
+}
+.sidebar li:hover .tooltip{
+  opacity: 1;
+  pointer-events: auto;
+  transition: all 0.4s ease;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.sidebar.open li .tooltip{
+  display: none;
+}
+.sidebar input{
+  font-size: 15px;
+  color: #FFF;
+  font-weight: 400;
+  outline: none;
+  height: 50px;
+  width: 100%;
+  width: 50px;
+  border: none;
+  border-radius: 12px;
+  transition: all 0.5s ease;
+  background: #1d1b31;
+}
+.sidebar.open input{
+  padding: 0 20px 0 50px;
+  width: 100%;
+}
+.sidebar .bx-search{
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  font-size: 22px;
+  background: #1d1b31;
+  color: #FFF;
+}
+.sidebar.open .bx-search:hover{
+  background: #1d1b31;
+  color: #FFF;
+}
+.sidebar .bx-search:hover{
+  background: #FFF;
+  color: #11101d;
+}
+.sidebar li a{
+  display: flex;
+  height: 100%;
+  width: 100%;
+  border-radius: 12px;
+  align-items: center;
+  text-decoration: none;
+  transition: all 0.4s ease;
+  background: #11101D;
+}
+
+
+.sidebar li a:hover{
+  background: #FFF;
+}
+.sidebar li a .links_name{
+  color: #fff;
+  font-size: 15px;
+  font-weight: 400;
+  white-space: nowrap;
+  opacity: 0;
+  pointer-events: none;
+  transition: 0.4s;
+}
+.sidebar.open li a .links_name{
+  opacity: 1;
+  pointer-events: auto;
+}
+
+
+.sidebar li a:hover .links_name,
+.sidebar li a:hover i{
+  transition: all 0.5s ease;
+  color: #11101D;
+}
+.sidebar li i{
+  height: 50px;
+  line-height: 50px;
+  font-size: 18px;
+  border-radius: 12px;
+}
+
+
+.sidebar li.profile{
+  position: fixed;
+  height: 60px;
+  width: 78px;
+  left: 0;
+  bottom: -8px;
+  padding: 10px 14px;
+  background: #1d1b31;
+  transition: all 0.5s ease;
+  overflow: hidden;
+}
+.sidebar.open li.profile{
+  width: 250px;
+}
+.sidebar li .profile-details{
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+.sidebar li img{
+  height: 45px;
+  width: 45px;
+  object-fit: cover;
+  border-radius: 6px;
+  margin-right: 10px;
+}
+.sidebar li.profile .name,
+.sidebar li.profile .job{
+  font-size: 15px;
+  font-weight: 400;
+  color: #fff;
+  white-space: nowrap;
+}
+.sidebar li.profile .job{
+  font-size: 12px;
+}
+.sidebar .profile #log_out{
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  background: #1d1b31;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+  border-radius: 0px;
+  transition: all 0.5s ease;
+}
+.sidebar.open .profile #log_out{
+  width: 50px;
+  background: none;
+}
+.home-section{
+  position: relative;
+  background: #ffffff;
+  min-height: 100vh;
+  top: 0;
+  left: 78px;
+  width: calc(100% - 78px);
+  transition: all 0.5s ease;
+  z-index: 2;
+}
+.sidebar.open ~ .home-section{
+  left: 250px;
+  width: calc(100% - 250px);
+}
+.home-section .text{
+  display: inline-block;
+  color: #11101d;
+  font-size: 25px;
+  font-weight: 500;
+  margin: 18px
+}
+
+.title-container {
+    justify-content: center;
+    width: 30%;
+    text-align: center;
+    position: relative;
+    height: 100%;
+    display: flex;
+    margin: auto;
+    top: 20px;
+    font-size:55px;
+    
+}
+
+
+.container-report {
+    justify-content: center;
+    width: 80%;
+    text-align: center;
+    position: relative;
+    height: 100%;
+    margin: 20px auto;
+    top: 20px;
+   
+}
+
+.box-modulo {
+  font-size: 25px;
+  margin-top: 25px;
+  cursor: pointer;
+}
+
+.title-modulo {
+  border-radius: 12px;
+  background-color: #002F56;
+
+}
+
+.modulo-text {
+  color: white;
+  
+}
+
+
+
+@media (max-width: 420px) {
+  .sidebar li .tooltip{
+    display: none;
+  }
+}
+
+</style>
 </html>
