--- a/fullstack/src/main/resources/templates/registrazione.html
+++ b/fullstack/src/main/resources/templates/registrazione.html
@@ -85,10 +85,20 @@
 					
 					<div class="input-box">		
 						<span class="details"> Ruolo: </span>
-						<select class="form-control" id="ruolo" name="ruolo" required>
+						<select onchange="yesnoCheck(this)" class="form-control" id="ruolo" name="ruolo" required>
 	                           <option th:each="r:${ruolo}" th:value="${r.ruolo}" th:text="${r.ruolo}" ></option>
 	                    </select>
 		            </div> 
+		            <div class="input-box">	
+			            <div id="ifYes" style="display: none;">
+						 
+							<span class="details"> Modulo: </span>
+							<select class="form-control" id="modulo" name="modulo" required>
+		                           <option th:each="m:${modulo}" th:value="${m.modulo}" th:text="${m.modulo}" ></option>
+		                    </select>
+	                    </div>
+					</div>
+					
 		                    <!-- Ho tolto il tag form, ma non so se c'è bisogno per il captcha -->
 		            <div class="input-box">        
 	                    <div class="form-group row">
@@ -102,9 +112,18 @@
 				
 			  	<!--  Success message -->
 				
-				<div th:if="${param.success}">
-					<div class="alert"> Grazie per esserti registrato! </div>
-					<div class="alert"><a href="/loginD">Tornare alla pagina login?</a></div>
+				<div class="success" th:if="${param.success}">
+					<div class="alert-success"> Utente registrato con successo! </div>
+              
+					<div class="alert-lgn"><a href="/">Tornare alla pagina login?</a></div>
+				</div>
+				
+				<!--  Error message -->
+				
+				<div class="error" th:if="${param.error}">
+					<div class="alert-error"> Utente già registrato! </div>
+              
+					<div class="alert-lista"><a href="/admin/listaUtenti">Vedere la lista utenti? </a></div>
 				</div>
 								
 			</form>
@@ -133,6 +152,17 @@
 	        closeBtn.classList.replace("bx-menu-alt-right","bx-menu");
 	    }
 	    }
+	    
+	    /* Codice per l'input modulo del docente */
+	    function yesnoCheck(that) {
+		    if (that.value == "Docente") {
+		        document.getElementById("ifYes").style.display = "block";
+		    } else {
+		        document.getElementById("ifYes").style.display = "none";
+		    }
+		}
+	   
+	    
       </script>
 
 </body>
@@ -486,6 +516,62 @@ form .user-details .input-box {
     background-color: #1d1b31;
     color: white;
     cursor: pointer;
+}
+
+
+.success {
+
+	width: 100%;
+	
+    justify-content: center;
+    align-items: center;
+}
+
+.alert-success {
+    background-color: green;
+	width: 100%;
+    height: 30px;
+    text-align: center;
+    margin: auto;
+    border-radius: 5px;
+    padding-top: 4px;
+}
+
+.alert-lgn {
+    padding-top: 12px;
+	width: 100%;
+    height: 30px;
+    text-align: center;
+    margin: auto;
+
+}
+
+.alert-lgn a {
+    color: white;
+}
+
+
+.alert-error {
+ 	background-color: red;
+	width: 100%;
+    height: 30px;
+    text-align: center;
+    margin: auto;
+    border-radius: 5px;
+    padding-top: 4px;
+}
+
+.alert-lista {
+	padding-top: 12px;
+	width: 100%;
+    height: 30px;
+    text-align: center;
+    margin: auto;
+}
+
+
+.alert-lista a {
+    color: white;
 }
 
 /* Responsive Form */
