--- a/fullstack/src/main/resources/templates/listaUtenti.html
+++ b/fullstack/src/main/resources/templates/listaUtenti.html
@@ -55,7 +55,7 @@
             <!--<img src="profile.jpg" alt="profileImg">-->
             <div class="name_job">
                 <div class="name"><p th:text= "${utente.nome}"></p></div> <!-- Nome Utente -->
-                <div class="job"><p th:text="${utente.ruolo.ruolo}"></div> <!-- Ruolo -->
+                <div class="job"><p th:text="${utente.getRuolo().getruolo()}"></div> <!-- Ruolo -->
             </div>
             </div>
             <a href="/logout"><i class='bx bx-log-out' id="log_out" ></i></a> <!-- Mapping che mi fa il logout -->
@@ -89,12 +89,30 @@
             <td th:text="${utenti.nome}"></td>
             <td th:text="${utenti.cognome}"></td>
             <td th:text="${utenti.email}"></td>
-            <td th:text="${utenti.ruolo.ruolo}"></td>
+           	<td th:text="${utenti.ruolo.getruolo()}"></td>
             <td th:text="${utenti.password}"></td>
-        
+        </tr>
         </table>
       </div>
     </section>  
+    
+    
+    <script type="text/javascript">
+   
+    var onloadCallback = function() {
+      alert("grecaptcha is ready!");
+    };
+    /* Codice per le animazioni della navbar */
+    let sidebar = document.querySelector(".sidebar");
+    let closeBtn = document.querySelector("#btn");
+    let searchBtn = document.querySelector(".bx-search");
+
+    closeBtn.addEventListener("click", ()=>{
+        sidebar.classList.toggle("open");
+        menuBtnChange();
+    });
+    
+    </script>
 </body>
 <!-- CSS STYLE -->
 <style>
