--- a/fullstack/src/main/resources/templates/registrazione.html
+++ b/fullstack/src/main/resources/templates/registrazione.html
@@ -55,7 +55,7 @@
             <!--<img src="profile.jpg" alt="profileImg">-->
             <div class="name_job">
                 <div class="name"><p th:text= "${utente.nome}"></p></div> <!-- Nome Utente -->
-                <div class="job"><p th:text="${utente.ruolo.ruolo}"></div> <!-- Ruolo -->
+                <div class="job"><p th:text="${utente.getRuolo().getruolo()}"></div> <!-- Ruolo -->
             </div>
             </div>
             <a href="/logout"><i class='bx bx-log-out' id="log_out" ></i></a> <!-- Mapping che mi fa il logout -->
