--- a/fullstack/src/main/resources/templates/modificaPassword.html
+++ b/fullstack/src/main/resources/templates/modificaPassword.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Boxicons CDN Link -->
+     <!-- Boxicons CDN Link -->
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
-    <title>Risultati</title>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+   
+    <title>Modifica Password</title>
 </head>
 <body>
 	<!--  Navbar on the left -->
-	    <div class="sidebar">
+    <div class="sidebar">
 	        <div class="logo-details">
 	
 	        <i></i>
@@ -41,33 +43,80 @@
 	        </li>
 	        </ul>
 	    </div>
+	<!-- Registration Form -->
+	<section class="home-section">
+		
+		<div class="container">
+			<div align="center" class="title"> Reimposta Password </div>
+			<form action="/admin/register" method="post">
+				<div class="user-details">
+					<div class="input-box">
+					  	<span class="details"> Nuova Password: </span>
+					  	<input type="password" name="nuovaPassword" placeholder= "Inserisci Nuova Password" required>
+			 		</div> 
+			 		<div class="input-box">    	
+					  	<span class="details"> Conferma Password: </span>
+					  	<input type="password" name="confermaPassword" placeholder= "Conferma Password" required>
+					</div> 	
 
-	<!-- Qua va messo tutto il contenuto --> 
-    <section class="home-section">
-		<div class="container"> 
-			<h1 th:text=${materia}></h1>
-			
-		</div>
-	</section>
-<script type="text/javascript">
-   
-    var onloadCallback = function() {
-      alert("grecaptcha is ready!");
-    };
-    /* Codice per le animazioni della navbar */
-    let sidebar = document.querySelector(".sidebar");
-    let closeBtn = document.querySelector("#btn");
-    let searchBtn = document.querySelector(".bx-search");
+		 
+		        </div>        
+				  		<div class="button">
+		                   <button class="btn" type="submit" value="Modifica"> Modifica </button>
+		    			</div>
+				
+			  	<!--  Success message -->
+				
+				<div class="success" th:if="${param.success}">
+					<div class="alert-success"> Utente registrato con successo! </div>
+              
+					<div class="alert-lgn"><a href="/">Tornare alla pagina login?</a></div>
+				</div>
+				
+				<!--  Error message -->
+				
+				<div class="error" th:if="${param.error}">
+					<div class="alert-error"> Utente già registrato! </div>
+              
+					<div class="alert-lista"><a href="/admin/listaUtenti">Vedere la lista utenti? </a></div>
+				</div>
+								
+			</form>
+	      
+	 	</div>
+	    
+    </section>
+      <script type="text/javascript">
+        var onloadCallback = function() {
+          alert("grecaptcha is ready!");
+        };
+        /* Codice per le animazioni della navbar */
+	    let sidebar = document.querySelector(".sidebar");
+	    let closeBtn = document.querySelector("#btn");
+	    let searchBtn = document.querySelector(".bx-search");
+	
+	    closeBtn.addEventListener("click", ()=>{
+	        sidebar.classList.toggle("open");
+	        menuBtnChange();
+	    });
 
-    closeBtn.addEventListener("click", ()=>{
-        sidebar.classList.toggle("open");
-        menuBtnChange();
-    });
-    
-</script>
+	    function menuBtnChange() {
+	    if(sidebar.classList.contains("open")){
+	        closeBtn.classList.replace("bx-menu", "bx-menu-alt-right");
+	    }else {
+	        closeBtn.classList.replace("bx-menu-alt-right","bx-menu");
+	    }
+	    }
+	    
+	 
+	   
+	    
+      </script>
+
 </body>
 <!-- CSS STYLE -->
 <style>
+/* Navbar Style */
 /* Google Font Link */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 *{
@@ -323,6 +372,7 @@
   width: calc(100% - 78px);
   transition: all 0.5s ease;
   z-index: 2;
+  padding: 10px;
 }
 .sidebar.open ~ .home-section{
   left: 250px;
@@ -336,60 +386,168 @@
   margin: 18px
 }
 
+/* Registration Form Style */ 
 
 
+.container {
+	width: 100%;
+	max-width: 700px;
+	padding: 25px 30px;
+	border-radius: 5px;
+    margin: 7% auto;
+    background: #002F56;
+    color: white;
+    
+}
 
-/* Lista utenti CSS */
-.title-container {
-    padding-top: 20px;
-    width: 40%;
-   
-    margin: auto;
+.container .title {
+	font-size: 30px;
+	font-weight: 500;
+	position: relative;
+	justify-content: center;
+}
+
+
+.container form .user-details {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	margin: 20px 0 12px 0;
+}
+
+
+form .user-details .input-box {
+	margin-bottom: 15px;
+	width: calc(100% / 2 - 20px);
+}
+
+.user-details .input-box .details {
+	display: block;
+	font-weight: 500;
+	margin-bottom: 5px;
+
+}
+.user-details .input-box input{
+	height: 45px;
+	width: 100%;
+	outline: none;
+	border-radius: 5px;
+	font-size: 14px;	
+	padding-left: 15px;
+	border: 1px solid black;
+}
+
+.user-details .input-box select{
+	height: 45px;
+	width: 100%;
+	outline: none;
+	border-radius: 5px;
+	font-size: 14px;	
+	padding-left: 15px;
+	border: 1px solid black;
+}
+
+.button {
+    height: 45px;
+    margin: 15px 0;
+}
+
+.btn {
+    height: 100%;
+    width: 100%;
+    outline: none;
+    border: none;
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: 1;
+    border-radius: 7px;
+    background-color: #1d1b31;
+    color: white;
+    cursor: pointer;
+}
+
+
+.success {
+
+	width: 100%;
+	
+    justify-content: center;
     align-items: center;
 }
 
-.title {
-    width: 100%;
-    margin: auto;
-    justify-content: center;
+.alert-success {
+    background-color: green;
+	width: 100%;
+    height: 30px;
     text-align: center;
-
-}
-
-.title p {
-    font-size: 30px;
-}
-
-
-.table-container {
-    overflow-x: auto;
-    width: 80%;
     margin: auto;
-    padding-top: 40px;
+    border-radius: 5px;
+    padding-top: 4px;
 }
 
-.table-container table {
-    border-collapse: collapse;
-    border-spacing: 0;
-    width: 100%;
-    border: 0.5px solid #002F56;
-}
-
-.table-container table th {
+.alert-lgn {
+    padding-top: 12px;
+	width: 100%;
+    height: 30px;
     text-align: center;
-    padding: 8px;
-    background-color: #002F56;
+    margin: auto;
+
+}
+
+.alert-lgn a {
     color: white;
-    border: 0.5px solid #ffffff;
-    border-bottom: none;
 }
 
-.table-container table td {
+
+.alert-error {
+ 	background-color: red;
+	width: 100%;
+    height: 30px;
     text-align: center;
-    padding: 8px;
-    border: 0.5px solid #002F56;
+    margin: auto;
+    border-radius: 5px;
+    padding-top: 4px;
 }
 
+.alert-lista {
+	padding-top: 12px;
+	width: 100%;
+    height: 30px;
+    text-align: center;
+    margin: auto;
+}
+
+
+.alert-lista a {
+    color: white;
+}
+
+/* Responsive Form */
+
+@media (max-width: 584px) {
+	.container {
+		max-width:100%;
+	}
+	
+	form .user-details .input-box {
+		margin-bottom: 15px;
+		width: 100%;
+	}
+	
+	.container form .user-details {
+		max-height: 300px;
+		overflow-y: scroll;
+	}
+	
+	.user-details::-webkit-scrollbar {
+		width: 0;
+	}
+	
+	
+}
 </style>
-</body>
 </html>
+
+
+
+
