--- a/fullstack/src/main/resources/templates/profilo.html
+++ b/fullstack/src/main/resources/templates/profilo.html
@@ -27,6 +27,13 @@
 	            </a>
 	            <span class="tooltip">Profilo</span>
 	        </li> 
+	        <li>
+	            <a href="/insegnante/modificaPassword">
+	            <i class='bx bxs-user-detail'></i>
+	            <span class="links_name">Modifica Password</span>
+	            </a>
+	            <span class="tooltip">Modifica Password</span>
+	        </li> 
 	      
 	
 	        <li class="profile">
