--- a/fullstack/src/main/resources/templates/reportDetails.html
+++ b/fullstack/src/main/resources/templates/reportDetails.html
@@ -13,12 +13,16 @@
 	       <td class="number-question"><p th:text= "Domanda + ${feedback.domanda.iddomanda}"></p></td>
 	       <td class="content-question"><p th:text= "${feedback.domanda.domanda}"></p></td>
 	       <td class="rating"><p th:text="${feedback.voto}"></p></td>
-	       <td class="dettagli"><button class="btn-dettagli"><i class='bx bx-detail'></i></button></td>
 	       </tr>
   	</table>
+<script>
+		
+		
+		
+		
+</script>
 </body>
 <style>
-
 
 </style>
 </html>
