--- a/fullstack/src/main/resources/templates/reportAll.html
+++ b/fullstack/src/main/resources/templates/reportAll.html
@@ -23,7 +23,7 @@
         <ul class="nav-list">
         
          <li>
-            <a href="/admin/report"> 
+            <a href="/admin/reportAll"> 
                 <i class='bx bxs-report' ></i>
             <span class="links_name">Report</span>
             </a>
