--- a/fullstack/src/main/resources/templates/listaUtenti.html
+++ b/fullstack/src/main/resources/templates/listaUtenti.html
@@ -23,7 +23,7 @@
         <ul class="nav-list">
         
          <li>
-            <a href="/admin/report"> 
+            <a href="/admin/reportAll"> 
                 <i class='bx bxs-report' ></i>
             <span class="links_name">Report</span>
             </a>
@@ -67,7 +67,7 @@
 	  	
 	  <div class="title-container">
         <div class="title">
-            <p> Lista Utenti </p>
+            <p class="report-title"> Lista Utenti </p>
         </div>
       </div>	
 	  	
